# clev2er

./: .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  pdocs_build.sh  pyproject.toml  pytest.ini
.github/workflows/: code_check.yml  poetry.yml  pre-commit.yml  python-app.yml  static.yml
atbd/: _config.yml  _toc.yml  ocog_retrack.md
config/: algorithm_list.yml  algorithm_list2.yml  main_config.xml  main_config.yml
config/algorithm_lists/: cryotempo.yml  cryotempo_B001.yml  cryotempo_C001.yml  landice.yml  testchain.yml  testchain_A001.xml  testchain_A001.yml  testchain_A002.xml  testchain_B002.xml
config/algorithm_lists/cryotempo/: cryotempo_B002.yml  cryotempo_C001.xml  cryotempo_C001.yml  cryotempo_C003.yml  cryotempo_C005.yml  cryotempo_C006.yml  cryotempo_C008.yml  cryotempo_C020.yml  cryotempo_C021.yml  cryotempo_C030.yml  cryotempo_C031.yml  cryotempo_C040.yml  cryotempo_C041.yml  cryotempo_C050.yml  cryotempo_C060.yml  cryotempo_C070.yml  cryotempo_C071.yml  cryotempo_C072.yml  cryotempo_C073.yml  cryotempo_C075.yml
config/chain_configs/: cryotempo_A001.yml  cryotempo_B001.yml  cryotempo_C001.yml  testchain.yml  testchain_A001.xml  testchain_A001.yml  testchain_A002.xml
docs/: .buildinfo  clev2er.html  clev2er.utils.cs2.html  clev2er.utils.cs2.waveform_quality.html  clev2er.utils.html  clev2er.utils.masks.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  search.js  searchindex.js
docs/_sources/: clev2er.rst.txt  clev2er.utils.cs2.rst.txt  clev2er.utils.cs2.waveform_quality.rst.txt  clev2er.utils.masks.rst.txt  clev2er.utils.rst.txt  index.rst.txt  modules.rst.txt
docs/clev2er/: algorithms.html  tools.html  utils.html
docsrc/: custom_sphinx_build.sh  pdocs_build.sh
docsrc/source/: conf.py  index.rst
src/clev2er/: __init__.py
tests/: test_algs.py
(+335 files in other folders)
