[tool.poetry]
name = "clev2er"
version = "0.1.0"
description = "CLEV2ER LI+IW chain"
authors = ["Alan Muir <a.muir@ucl.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.3"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
