[tool.poetry]
name = "clev2er"
version = "0.1.0"
description = "CLEV2ER LI+IW chain"
authors = ["Alan Muir <a.muir@ucl.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
numpy = "^1.24.3"
envyaml = "^1.10"
codetiming = "^1.4.0"
netcdf4 = "^1.6.3"
pyproj = "^3.5.0"
pygments = "^2.15.1"
scipy = "^1.10.1"
matplotlib = "^3.7.1"
tifffile = "^2023.4.12"
imagecodecs = "^2023.3.16"
rasterio = "^1.3.8"
tqdm = "^4.66.1"


[tool.poetry.group.dev.dependencies]
black = "*"
pre-commit = "*"
pylint = "*"
isort = "*"
pytest = "^7.3.1"
sphinx = "^7.0.1"
sphinxcontrib-napoleon = "^0.7"
furo = "^2023.5.20"
pdoc = "^14.0.0"
mypy = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
line_length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
markers = [
    "lrm",
    "sin",
]